--- a/inst/pkgdown/_pkgdown.yml
+++ b/inst/pkgdown/_pkgdown.yml
@@ -1,3 +1,8 @@
+template:
+  bootstrap: 5
+  bootswatch: flatly
+  theme: monokai
+
 home:
   sidebar:
     structure: [links, license, community-org, citation, authors, dev]
