Add author metadata from epinowcast repo

--- a/inst/pkgdown/_pkgdown.yml
+++ b/inst/pkgdown/_pkgdown.yml
@@ -15,3 +15,7 @@ home:
           [Style guide](https://github.com/epinowcast/.github/blob/main/STYLE_GUIDE.md)
 
           [Code of conduct](https://github.com/epinowcast/.github/blob/main/CODE_OF_CONDUCT.md)
+
+authors:
+  Sam Abbott:
+    href: "https://www.samabbott.co.uk/"
